--- a/.cproject
+++ b/.cproject
@@ -10,12 +10,16 @@
 					<extension id="org.eclipse.cdt.core.GmakeErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 					<extension id="org.eclipse.cdt.core.CWDLocator" point="org.eclipse.cdt.core.ErrorParser"/>
 					<extension id="org.eclipse.cdt.core.GCCErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
+					<extension id="org.eclipse.cdt.core.GLDErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
+					<extension id="org.eclipse.cdt.core.MakeErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
+					<extension id="org.eclipse.cdt.core.VCErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
+					<extension id="org.eclipse.cdt.autotools.core.ErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration buildProperties="" id="org.eclipse.cdt.cross.arm.gnu.linux.toolchain.base.1389459767" name="Default" parent="org.eclipse.cdt.build.core.emptycfg">
+				<configuration artifactName="${ProjName}" buildProperties="" description="" id="org.eclipse.cdt.cross.arm.gnu.linux.toolchain.base.1389459767" name="Default" parent="org.eclipse.cdt.build.core.emptycfg">
 					<folderInfo id="org.eclipse.cdt.cross.arm.gnu.linux.toolchain.base.1389459767.1476002721" name="/" resourcePath="">
-						<toolChain id="org.eclipse.cdt.cross.arm.gnu.linux.toolchain.base.461008216" name="ARM Linux GCC (GNUARM)" superClass="org.eclipse.cdt.cross.arm.gnu.linux.toolchain.base">
+						<toolChain id="org.eclipse.cdt.cross.arm.gnu.linux.toolchain.base.461008216" name="ARM Linux GCC (GNUARM)">
 							<option id="org.eclipse.cdt.cross.arm.gnu.linux.option.target.processor.390702489" name="Processor" superClass="org.eclipse.cdt.cross.arm.gnu.linux.option.target.processor"/>
 							<option id="org.eclipse.cdt.cross.arm.gnu.linux.option.target.thumb.1878279129" name="Thumb (-mthumb)" superClass="org.eclipse.cdt.cross.arm.gnu.linux.option.target.thumb"/>
 							<option id="org.eclipse.cdt.cross.arm.gnu.linux.option.target.thumbinterwork.1318726700" name="Thumb interwork (-mthumb-interwork)" superClass="org.eclipse.cdt.cross.arm.gnu.linux.option.target.thumbinterwork"/>
@@ -30,19 +34,22 @@
 							<option id="org.eclipse.cdt.cross.arm.gnu.linux.option.addtools.createflash.1077460340" name="Create Flash Image" superClass="org.eclipse.cdt.cross.arm.gnu.linux.option.addtools.createflash"/>
 							<option id="org.eclipse.cdt.cross.arm.gnu.linux.option.addtools.createlisting.58323483" name="Create Extended Listing" superClass="org.eclipse.cdt.cross.arm.gnu.linux.option.addtools.createlisting"/>
 							<option id="org.eclipse.cdt.cross.arm.gnu.linux.option.addtools.printsize.2024466119" name="Print Size" superClass="org.eclipse.cdt.cross.arm.gnu.linux.option.addtools.printsize"/>
-							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.GNU_ELF" id="org.eclipse.cdt.cross.arm.gnu.linux.platform.base.1443611644" isAbstract="false" name="Linux Platform" osList="linux" superClass="org.eclipse.cdt.cross.arm.gnu.linux.platform.base"/>
-							<builder id="org.eclipse.cdt.cross.arm.gnu.linux.builder.base.1453138980" managedBuildOn="false" name="ARM Linux GNU Make builder.Default" superClass="org.eclipse.cdt.cross.arm.gnu.linux.builder.base"/>
-							<tool id="org.eclipse.cdt.cross.arm.gnu.linux.assembler.base.1495683983" name="ARM Linux GCC Assembler" superClass="org.eclipse.cdt.cross.arm.gnu.linux.assembler.base"/>
-							<tool id="org.eclipse.cdt.cross.arm.gnu.linux.c.compiler.base.1696632559" name="ARM Linux GCC C Compiler" superClass="org.eclipse.cdt.cross.arm.gnu.linux.c.compiler.base"/>
-							<tool id="org.eclipse.cdt.cross.arm.gnu.linux.cpp.compiler.base.156123567" name="ARM Linux GCC C++ Compiler" superClass="org.eclipse.cdt.cross.arm.gnu.linux.cpp.compiler.base"/>
-							<tool id="org.eclipse.cdt.cross.arm.gnu.linux.c.linker.base.1866929547" name="ARM Linux GCC C Linker" superClass="org.eclipse.cdt.cross.arm.gnu.linux.c.linker.base"/>
-							<tool id="org.eclipse.cdt.cross.arm.gnu.linux.cpp.linker.base.1956243236" name="ARM Linux GCC C++ Linker" superClass="org.eclipse.cdt.cross.arm.gnu.linux.cpp.linker.base"/>
-							<tool id="org.eclipse.cdt.cross.arm.gnu.linux.archiver.base.917838809" name="ARM Linux GCC Archiver" superClass="org.eclipse.cdt.cross.arm.gnu.linux.archiver.base"/>
-							<tool id="org.eclipse.cdt.cross.arm.gnu.linux.createflash.base.1717487710" name="ARM Linux GNU Create Flash Image" superClass="org.eclipse.cdt.cross.arm.gnu.linux.createflash.base"/>
-							<tool id="org.eclipse.cdt.cross.arm.gnu.linux.createlisting.base.1383143086" name="ARM Linux GNU Create Listing" superClass="org.eclipse.cdt.cross.arm.gnu.linux.createlisting.base"/>
-							<tool id="org.eclipse.cdt.cross.arm.gnu.linux.printsize.base.599064850" name="ARM Linux GNU Print Size" superClass="org.eclipse.cdt.cross.arm.gnu.linux.printsize.base"/>
+							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.GNU_ELF" id="org.eclipse.cdt.cross.arm.gnu.linux.platform.base.1443611644" isAbstract="false" name="Linux Platform" osList="linux"/>
+							<builder id="org.eclipse.cdt.cross.arm.gnu.linux.builder.base.1453138980" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="ARM Linux GNU Make builder.Default">
+								<outputEntries>
+									<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name=""/>
+								</outputEntries>
+							</builder>
 						</toolChain>
 					</folderInfo>
+					<sourceEntries>
+						<entry excluding="fatfs|lib/CMSIS_CM3|lib/STM32F10x_StdPeriph_Driver|lib/STM32_USB-FS-Device_Driver|FreeRTOS" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="FreeRTOS"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="fatfs"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="lib/CMSIS_CM3"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="lib/STM32F10x_StdPeriph_Driver"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="lib/STM32_USB-FS-Device_Driver"/>
+					</sourceEntries>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
@@ -55,4 +62,10 @@
 		<project id="energy-monitor.null.430901629" name="energy-monitor"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Default">
+			<resource resourceType="PROJECT" workspacePath="/energy-monitor"/>
+		</configuration>
+	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
